# ABNAMRO

./: README.md  exercise.md  pyproject.toml  requirements.txt
output/best_salesperson/: .part-00000-aaab38c4-0b1c-45c0-8675-9ea3bd4c3fe5-c000.csv.crc
output/department_breakdown/: .part-00000-579d90ee-c77b-47d1-8fe0-a854f5fc68ba-c000.csv.crc  part-00000-579d90ee-c77b-47d1-8fe0-a854f5fc68ba-c000.csv
output/it_data/: .part-00000-8af4dd6b-4c87-4a23-b61b-6255377ec409-c000.csv.crc  part-00000-8af4dd6b-4c87-4a23-b61b-6255377ec409-c000.csv
output/marketing_address_info/: .part-00000-d57c17d9-2f47-4610-b9c7-cd9cd25f8080-c000.csv.crc  part-00000-d57c17d9-2f47-4610-b9c7-cd9cd25f8080-c000.csv
output/top_3_best_performers_per_department/: .part-00000-cd69bf62-0752-4395-a589-04e450922188-c000.csv.crc
output/top_3_most_sold_per_department_netherlands/: part-00000-7dc1f183-9fbb-412a-9c94-eafbadae423e-c000.csv
src/: main.py
src/assignment/: main.py  sales_data.py
test/: test_department_breakdown.py  test_it_department.py  test_marketing_address_info.py  test_top_3_best_performers_per_department.py  test_top_3_best_salesperson_department.py  test_top_3_best_salesperson_department_country.py  test_top_3_most_sold_products_per_department.py
test/department_breakdown/: .part-00000-047624eb-1f09-42e6-8f3b-319c4a8d0019-c000.csv.crc
test/expected_department_breakdown/: part-00000-8e669b64-8122-44e4-a41f-e58112b8cb20-c000.csv
test/expected_top_3_most_sold_products_per_department/: part-00000-bcf83041-2a11-4d4b-ba1f-2221885a7c1c-c000.csv
test/resources/: dataset_one.csv  (+2 more)
(+13 files in other folders)
