[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Sapna Gupta", email = "xx@example.com"}
]

name = "abnamro-assignment"

version = "0.0.1"

requires-python = ">= 3.10"

readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
sales-data = "src:assignment:sales_data"